# rewrite

./: .gitignore  Cargo.toml  LICENSE
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/bot/src/commands/: collective.rs  misc.rs  mod.rs
crates/models/: Cargo.toml
crates/models/migrations/: 01_init.sql
crates/models/src/: collective.rs  lib.rs  mate.rs
