[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
poise = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
dotenvy = "0.15.7"
sqlx.workspace = true
chrono.workspace = true
models = { path = "../models" }
rust-s3 = "0.33.0"
anyhow = "1.0.82"
